框架初始化

--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -1,8 +1,8 @@
-* {
-  box-sizing: border-box;
+#app {
+  font-size: 14px;
+  color: #333;
 }
 
-body {
-  padding: 0;
-  margin: 0;
+* {
+  font-family: v-sans, v-mono, serif;
 }
