--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -4,6 +4,6 @@
 }
 
 * {
-  font-family: v-sans, v-mono, serif;
+  font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   box-sizing: border-box;
 }
