--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,1 +1,2 @@
 $primary-color: #1677ff;
+$main-shadow: 0 1px 2px -2px rgba(0, 0, 0, .08), 0 3px 6px 0 rgba(0, 0, 0, .06), 0 5px 12px 4px rgba(0, 0, 0, .04);
